--- a/src/content/pages/Bios/alice.html
+++ b/src/content/pages/Bios/alice.html
@@ -1,10 +1,13 @@
 <head>
-    <html lang="en"> 
+    <html lang="en">
     <meta charset="utf-8">
 </head>
-
+<a href="https://41ibi.github.io/code_copycats/"><button style="text-align: right;" class="button-61" role="button">BACK TO HOME</button></a>
 <div>
-<h1><center>Alice Bi</center></h1>
-<center><img src="https://www.dropbox.com/s/hesqzwmt61nu4w1/profile.JPEG?dl=1" alt="Profile picture." width="auto", height="200px"></center>
-<p>Alice is an undergraduate student at the University of Maryland, College Park double-majoring in English and International Relations. She's lived in Taipei, Beijing, Singapore, and now College Park - where she's a member of the Jiménez-Porter Writers' House. She's interested in the digital and the liminal.</p>
+    <h1>
+        <center>Alice Bi</center>
+    </h1>
+    <center><img src="https://www.dropbox.com/s/hesqzwmt61nu4w1/profile.JPEG?dl=1" alt="Profile picture." width="auto" , height="200px"></center>
+    <p>Alice is an undergraduate student at the University of Maryland, College Park double-majoring in English and International Relations. She's lived in Taipei, Beijing, Singapore, and now College Park - where she's a member of the Jiménez-Porter Writers'
+        House. She's interested in the digital and the liminal.</p>
 </div>
