--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -1,3 +1,4 @@
+<a href="https://41ibi.github.io/code_copycats/"><button style="text-align: right;" class="button-61" role="button">BACK TO HOME</button></a>
 <div>
     <img src="colorful_copycats.png" alt="Cat logo ejemplo" width="300vmax" style="float: left;" " hspace="20 " vspace="3 " ">
     <p align="justify"> <b>The Code Copycats</b> are a group that integrates students from the University of Maryland and the Universidad del Salvador. We are a multicultural and multilingual group aiming to develop collaborative work to build a bilingual static site of
