--- a/src/content/pages/edition.html
+++ b/src/content/pages/edition.html
@@ -1,4 +1,5 @@
 <div>
+    <a href="https://41ibi.github.io/code_copycats/"><button style="text-align: right;" class="button-61" role="button">BACK TO HOME</button></a>
 
     <h1>Our Edition</h1>
 
