--- a/src/content/pages/team.html
+++ b/src/content/pages/team.html
@@ -1,6 +1,6 @@
 <div>
     <h1 style="text-align:center">Our Team</h1>
-    <a href="https://41ibi.github.io/"><button style="text-align: right;" class="button-61" role="button">BACK TO HOME</button></a>
+    <a href="https://41ibi.github.io/code_copycats/"><button style="text-align: right;" class="button-61" role="button">BACK TO HOME</button></a>
     <div class="card-container">
         <div class="card">
             <img src="alice2.jpg" alt="Alice Bi" style="width:100%">
