--- a/src/content/pages/Bios/julie.html
+++ b/src/content/pages/Bios/julie.html
@@ -1,3 +1,4 @@
+<a href="https://41ibi.github.io/code_copycats/"><button style="text-align: right;" class="button-61" role="button">BACK TO HOME</button></a>
 <div>
     <h1 style="text-align: center;" ;>Julieta Goldsmidt</h1>
 
