--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -1,5 +1,6 @@
-<div class="charter">	
-<img src="Cat_Logo_test2.jpg" alt="Charter_Logo." width="auto", height="400px">
+<a href="https://41ibi.github.io/code_copycats/"><button style="text-align: right;" class="button-61" role="button">BACK TO HOME</button></a>
+<div class="charter">
+    <img src="Cat_Logo_test2.jpg" alt="Charter_Logo." width="auto" , height="400px">
     <h2>Team charter / Contrato de equipo</h2>
     <h3><i>Last updated / Última actualización: 2022-09-21</i></h3>
     <h3>Group name / Nombre del Equipo: The Code Copycats</h3>
