--- a/src/content/pages/team.html
+++ b/src/content/pages/team.html
@@ -11,7 +11,7 @@
             <a href="#"><i class="fa fa-twitter"></i></a>
             <a href="#"><i class="fa fa-linkedin"></i></a>
             <a href="#"><i class="fa fa-facebook"></i></a>
-            <p><a href="https://41ibi.github.io/code_copycats/Alice"><button class="button-card">More info</button></a></p>
+            <p><a href="https://41ibi.github.io/code_copycats/alice"><button class="button-card">More info</button></a></p>
         </div>
         <div class="card">
             <img src="Carlos2.jpeg" alt="Carlos" style="width:100%">
