--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -1,4 +1,6 @@
-<a href="https://41ibi.github.io/code_copycats/"><button style="text-align: right;" class="button-61" role="button">BACK TO HOME</button></a>
+<nav style="text-align: right" ;>
+    <a href="https://41ibi.github.io/code_copycats/"><button  class="button-61" role="button">BACK TO HOME</button></a>
+</nav>
 <div class="charter">
     <div class="charter-title"></div><img src="Cat_Logo_test2.jpg" alt="Charter_Logo." width="auto" , height="400px">
     <h2>Team charter / Contrato de equipo</h2>
