--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -3,10 +3,11 @@
     <a href="https://41ibi.github.io/code_copycats/"><button  class="button-61" role="button">BACK TO HOME</button></a>
 </nav>
 <div class="charter">
-    <div class="charter-title"></div><img src="Cat_Logo_test2.jpg" alt="Charter_Logo." width="auto" , height="400px">
-    <h2>Team charter / Contrato de equipo</h2>
-    <h3><i>Last updated / Última actualización: 2022-09-21</i></h3>
-    <h3>Group name / Nombre del Equipo: The Code Copycats</h3>
+    <div class="charter-title"><img src="Cat_Logo_test2.jpg" alt="Charter_Logo." width="auto" , height="400px">
+        <h2>Team charter / Contrato de equipo</h2>
+        <h3><i>Last updated / Última actualización: 2022-09-21</i></h3>
+        <h3>Group name / Nombre del Equipo: The Code Copycats</h3>
+    </div>
 </div>
 <h3>Roles / Roles</h3>
 <p>
