--- a/src/content/pages/edition.html
+++ b/src/content/pages/edition.html
@@ -1,6 +1,10 @@
+<nav style="text-align: right" ;>
+    <a href="https://41ibi.github.io/code_copycats/"><button  class="button-61" role="button">HOME</button></a>
+    <a href="https://41ibi.github.io/code_copycats/"><button  class="button-61" role="button">TEAM</button></a>
+    <a href="https://41ibi.github.io/code_copycats/"><button  class="button-61" role="button">CHARTER</button></a>
+    <a href="https://41ibi.github.io/code_copycats/"><button  class="button-61" role="button">EDITION</button></a>
+</nav>
 <div>
-    <a href="https://41ibi.github.io/code_copycats/"><button style="text-align: right;" class="button-61" role="button">BACK TO HOME</button></a>
-
     <h1>Our Edition</h1>
 
     <p>Add text about the edition here.</p>
