--- a/src/content/pages/team.html
+++ b/src/content/pages/team.html
@@ -1,6 +1,11 @@
+<nav style="text-align: right" ;>
+    <a href="https://41ibi.github.io/code_copycats/"><button  class="button-61" role="button">HOME</button></a>
+    <a href="https://41ibi.github.io/code_copycats/"><button  class="button-61" role="button">TEAM</button></a>
+    <a href="https://41ibi.github.io/code_copycats/"><button  class="button-61" role="button">CHARTER</button></a>
+    <a href="https://41ibi.github.io/code_copycats/"><button  class="button-61" role="button">EDITION</button></a>
+</nav>
 <div>
     <h1 style="text-align:center">Our Team</h1>
-    <a href="https://41ibi.github.io/code_copycats/"><button style="text-align: right;" class="button-61" role="button">BACK TO HOME</button></a>
     <div class="card-container">
         <div class="card">
             <img src="alice2.jpg" alt="Alice Bi" style="width:100%">
