--- a/src/content/pages/Bios/Nery.html
+++ b/src/content/pages/Bios/Nery.html
@@ -1,4 +1,9 @@
-<a href="https://41ibi.github.io/code_copycats/"><button style="text-align: right;" class="button-61" role="button">BACK TO HOME</button></a>
+<nav style="text-align: right" ;>
+    <a href="https://41ibi.github.io/code_copycats/"><button  class="button-61" role="button">HOME</button></a>
+    <a href="https://41ibi.github.io/code_copycats/team"><button  class="button-61" role="button">TEAM</button></a>
+    <a href="https://41ibi.github.io/code_copycats/Copycats%20Charter"><button  class="button-61" role="button">CHARTER</button></a>
+    <a href="https://41ibi.github.io/code_copycats/edition"><button  class="button-61" role="button">EDITION</button></a>
+</nav>
 <div>
     <img src="Neryprofile_pic.jpeg" alt="Neryprofile_pic photo" width="200vmax" style="float: center;" " hspace="15 " vspace="10 " ">
     <div class="barra-redes">
