--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -1,8 +1,8 @@
 <nav style="text-align: right" ;>
     <a href="https://41ibi.github.io/code_copycats/"><button  class="button-61" role="button">HOME</button></a>
-    <a href="https://41ibi.github.io/code_copycats/"><button  class="button-61" role="button">TEAM</button></a>
-    <a href="https://41ibi.github.io/code_copycats/"><button  class="button-61" role="button">CHARTER</button></a>
-    <a href="https://41ibi.github.io/code_copycats/"><button  class="button-61" role="button">EDITION</button></a>
+    <a href="https://41ibi.github.io/code_copycats/team"><button  class="button-61" role="button">TEAM</button></a>
+    <a href="https://41ibi.github.io/code_copycats/Copycats%20Charter"><button  class="button-61" role="button">CHARTER</button></a>
+    <a href="https://41ibi.github.io/code_copycats/edition"><button  class="button-61" role="button">EDITION</button></a>
 </nav>
 <div>
     <img src="colorful_copycats.png" alt="Cat logo ejemplo" width="300vmax" style="float: left;" " hspace="20 " vspace="3 " ">
