--- a/src/content/pages/team.html
+++ b/src/content/pages/team.html
@@ -21,7 +21,7 @@
         <div class="card">
             <img src="Carlos2.jpeg" alt="Carlos" style="width:100%">
             <h1>Carlos Nusch</h1>
-            <p class="title-card">Profesor y Licenciado en Letras</p>
+            <p class="title-card">Literature Professor</p>
             <p>Universidad Nacional de La Plata</p>
             <a href="#"><i class="fa fa-dribbble"></i></a>
             <a href="#"><i class="fa fa-twitter"></i></a>
@@ -33,7 +33,7 @@
         <div class="card">
             <img src="julie-profile2.jpeg" alt="Julieta Goldsmidt" style="width:100%">
             <h1>Julieta Goldsmidt</h1>
-            <p class="title-card">Clinical psychologist</p>
+            <p class="title-card">Clinical Psychologist</p>
             <p>Universidad de Buenos Aires</p>
             <a href="#"><i class="fa fa-dribbble"></i></a>
             <a href="#"><i class="fa fa-twitter"></i></a>
