--- a/src/content/pages/team.html
+++ b/src/content/pages/team.html
@@ -8,10 +8,9 @@
     <h1 style="text-align:center">Our Team</h1>
     <div class="card-container">
         <div class="card">
-            <img src="alice2.jpg" alt="Alice Bi" style="width:100%">
+            <img src="alice2.jpg" alt="Alice Bi">
             <p>Alice Bi</p>
             <p class="title-card">International Relations</p>
-            <p>University of Maryland</p>
             <a href="#"><i class="fa fa-dribbble"></i></a>
             <a href="#"><i class="fa fa-twitter"></i></a>
             <a href="#"><i class="fa fa-linkedin"></i></a>
@@ -19,10 +18,9 @@
             <p><a href="https://41ibi.github.io/code_copycats/alice"><button class="button-card">More info</button></a></p>
         </div>
         <div class="card">
-            <img src="Carlos2.jpeg" alt="Carlos" style="width:100%">
+            <img src="Carlos2.jpeg" alt="Carlos">
             <p>Carlos Nusch</p>
             <p class="title-card">Literature Professor</p>
-            <p>Universidad Nacional de La Plata</p>
             <a href="#"><i class="fa fa-dribbble"></i></a>
             <a href="#"><i class="fa fa-twitter"></i></a>
             <a href="#"><i class="fa fa-linkedin"></i></a>
@@ -31,10 +29,9 @@
         </div>
 
         <div class="card">
-            <img src="julie-profile2.jpeg" alt="Julieta Goldsmidt" style="width:100%">
+            <img src="julie-profile2.jpeg" alt="Julieta Goldsmidt">
             <p>Julieta Goldsmidt</p>
             <p class="title-card">Clinical Psychologist</p>
-            <p>Universidad de Buenos Aires</p>
             <a href="#"><i class="fa fa-dribbble"></i></a>
             <a href="#"><i class="fa fa-twitter"></i></a>
             <a href="#"><i class="fa fa-linkedin"></i></a>
@@ -43,10 +40,9 @@
         </div>
 
         <div class="card">
-            <img src="Neryprofile_pic.jpeg" alt="Nery González" style="width:100%">
+            <img src="Neryprofile_pic.jpeg" alt="Nery González">
             <p>Nery González</p>
             <p class="title-card">Sociologist</p>
-            <p>Central University of Venezuela</p>
             <a href="#"><i class="fa fa-dribbble"></i></a>
             <a href="#"><i class="fa fa-twitter"></i></a>
             <a href="#"><i class="fa fa-linkedin"></i></a>
