--- a/src/content/pages/team.html
+++ b/src/content/pages/team.html
@@ -10,51 +10,43 @@
         <div class="title-card">
             <img src="alice2.jpg" alt="Alice Bi" style="width:100%">
             <p>Alice Bi</p>
+        </div>
+        <div>
             <p class="card">International Relations</p>
-            <a href="#"><i class="fa fa-dribbble"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-linkedin"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
             <p><a href="https://41ibi.github.io/code_copycats/alice"><button class="button-card">More info</button></a></p>
         </div>
         <div class="title-card">
             <img src="Carlos2.jpeg" alt="Carlos" style="width:100%">
             <p>Carlos Nusch</p>
+        </div>
+        <div>
             <p class="card">Literature Professor</p>
-            <a href="#"><i class="fa fa-dribbble"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-linkedin"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
             <p><a href="https://41ibi.github.io/code_copycats/Carlos"><button class="button-card">More info</button></a></p>
         </div>
 
         <div class="title-card">
             <img src="julie-profile2.jpeg" alt="Julieta Goldsmidt" style="width:100%">
             <p>Julieta Goldsmidt</p>
+        </div>
+        <div>
             <p class="card">Clinical Psychologist</p>
-            <a href="#"><i class="fa fa-dribbble"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-linkedin"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
             <p><a href="https://41ibi.github.io/code_copycats/julie"><button class="button-card">More info</button></a></p>
         </div>
 
         <div class="title-card">
             <img src="Neryprofile_pic.jpeg" alt="Nery González" style="width:100%">
             <p>Nery González</p>
+        </div>
+        <div>
             <p class="card">Sociologist</p>
-            <a href="#"><i class="fa fa-dribbble"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-linkedin"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
             <p><a href="https://41ibi.github.io/code_copycats/Nery"><button class="button-card">More info</button></a></p>
         </div>
 
 
     </div>
-
-    <footer>
-        <p>
-            A project by the Code Copycats | 2022
-        </p>
-    </footer>
+</div>
+<footer>
+    <p>
+        A project by the Code Copycats | 2022
+    </p>
+</footer>
