--- a/src/content/pages/team.html
+++ b/src/content/pages/team.html
@@ -7,42 +7,46 @@
 <div>
     <h1 style="text-align:center">Our Team</h1>
     <div class="card-container">
-        <div class="title-card">
-            <img src="alice2.jpg" alt="Alice Bi" style="width:100%">
-            <p>Alice Bi</p>
+        <div class="unit-card">
+            <div class="title-card">
+                <img src="alice2.jpg" alt="Alice Bi" style="width:100%">
+                <p>Alice Bi</p>
+            </div>
+            <div>
+                <p class="card">International Relations</p>
+                <p><a href="https://41ibi.github.io/code_copycats/alice"><button class="button-card">More info</button></a></p>
+            </div>
         </div>
-        <div>
-            <p class="card">International Relations</p>
-            <p><a href="https://41ibi.github.io/code_copycats/alice"><button class="button-card">More info</button></a></p>
+        <div class="unit-card">
+            <div class="title-card">
+                <img src="Carlos2.jpeg" alt="Carlos" style="width:100%">
+                <p>Carlos Nusch</p>
+            </div>
+            <div>
+                <p class="card">Literature Professor</p>
+                <p><a href="https://41ibi.github.io/code_copycats/Carlos"><button class="button-card">More info</button></a></p>
+            </div>
         </div>
-        <div class="title-card">
-            <img src="Carlos2.jpeg" alt="Carlos" style="width:100%">
-            <p>Carlos Nusch</p>
+        <div class="unit-card">
+            <div class="title-card">
+                <img src="julie-profile2.jpeg" alt="Julieta Goldsmidt" style="width:100%">
+                <p>Julieta Goldsmidt</p>
+            </div>
+            <div>
+                <p class="card">Clinical Psychologist</p>
+                <p><a href="https://41ibi.github.io/code_copycats/julie"><button class="button-card">More info</button></a></p>
+            </div>
         </div>
-        <div>
-            <p class="card">Literature Professor</p>
-            <p><a href="https://41ibi.github.io/code_copycats/Carlos"><button class="button-card">More info</button></a></p>
+        <div class="unit-card">
+            <div class="title-card">
+                <img src="Neryprofile_pic.jpeg" alt="Nery González" style="width:100%">
+                <p>Nery González</p>
+            </div>
+            <div>
+                <p class="card">Sociologist</p>
+                <p><a href="https://41ibi.github.io/code_copycats/Nery"><button class="button-card">More info</button></a></p>
+            </div>
         </div>
-
-        <div class="title-card">
-            <img src="julie-profile2.jpeg" alt="Julieta Goldsmidt" style="width:100%">
-            <p>Julieta Goldsmidt</p>
-        </div>
-        <div>
-            <p class="card">Clinical Psychologist</p>
-            <p><a href="https://41ibi.github.io/code_copycats/julie"><button class="button-card">More info</button></a></p>
-        </div>
-
-        <div class="title-card">
-            <img src="Neryprofile_pic.jpeg" alt="Nery González" style="width:100%">
-            <p>Nery González</p>
-        </div>
-        <div>
-            <p class="card">Sociologist</p>
-            <p><a href="https://41ibi.github.io/code_copycats/Nery"><button class="button-card">More info</button></a></p>
-        </div>
-
-
     </div>
 </div>
 <footer>
