--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -10,19 +10,23 @@
         <img src="Cat_Logo_test2.jpg" alt="Charter_Logo." width="auto" , height="400px">
         <h3>Group name / Nombre del Equipo: The Code Copycats</h3>
         <h3><i>Last updated / Última actualización: 2022-09-21</i></h3>
-    </div>
-</div>
-<h3>Roles / Roles</h3>
+    </div> 
+<div class="flex-container">
+  <div1
+
+<h3>Roles</h3>
 <p>
-    Technical leader / Líder técnicx : Alice Bi Submitter / Encargadx de envíos: Carlos Nusch.
+    Technical leader 
 </p>
-<h2>Team Members / Integrantes del equipo</h2>
+<h2>Team Members </h2>
 <ul>
     <li>Julieta Goldsmidt, she/her/hers/ y ella, (ARG), HTML/CSS editor.</li>
     <li> Nery Gonzalez, she/hers y ella, (US), Translator. </li>
     <li> Alice Bi, she/hers (US) technical lead.</li>
     <li> Carlos Javier Nusch, He/his, el, La Plata (ARG), Submitter.</li>
 </ul>
+</div>
+
 <h2>Goals / Objetivos</h2>
 <ul>
     <li>Recognize different approaches to the DH that include critical analysis of platforms, technoculture, archives, and design thinking.</li>
