--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -12,12 +12,7 @@
         <h3><i>Last updated / Última actualización: 2022-09-21</i></h3>
     </div> 
 <div class="flex-container">
-  <div1
-
-<h3>Roles</h3>
-<p>
-    Technical leader 
-</p>
+<div1
 <h2>Team Members </h2>
 <ul>
     <li>Julieta Goldsmidt, she/her/hers/ y ella, (ARG), HTML/CSS editor.</li>
@@ -25,15 +20,38 @@
     <li> Alice Bi, she/hers (US) technical lead.</li>
     <li> Carlos Javier Nusch, He/his, el, La Plata (ARG), Submitter.</li>
 </ul>
-</div>
 
-<h2>Goals / Objetivos</h2>
+<h2>Goals</h2>
 <ul>
     <li>Recognize different approaches to the DH that include critical analysis of platforms, technoculture, archives, and design thinking.</li>
     <li>Learn how to pair textual analysis with sustainable and humanistic archival practices that consider the people and artifacts at the center of our work. </li>
     <li>Expand collaborative work skills and produce an efficient and balanced distribution of tasks.</li>
     <li>Locate the limitations and benefits of collaborative work, in order to take advantage of resources.</li>
     <li>Share and respect the different individual knowledge to solve possible problems and group challenges.</li>
+
+    <h2>Core Values</h2>
+<h4>Respect</h4>
+<p>Respecting and sharing each other’s expertise, acknowledging that everyone has something to contribute to our project.</p>
+<h4>Honest Communication</h4>
+<p>We look forward to communicating frequently and honestly about progress - including troubles, fixes, and further solutions - so we can learn and work together the best we can.</p>
+<h4>Confidence</h4>
+<p>Self-confidence makes it possible to improve the work environment and strengthen the team project. For this reason, it is essential to help each member feel comfortable with each other.</p>
+<h4>Team Knowledge Building</h4>
+<p>Approach knowledge as an interpersonal construction and not an individual process.</p>
+<h4>Ethics </h4>
+<p>Being aware of the ways in which our models of thinking fall short in order to help us identify morally opaque facets of digital work.</p>
+</div>
+
+<div class="flex-container">
+    <div2
+    <h2>Miembros del equipo</h2>
+    <p>
+    <li>Julieta Goldsmidt, she/her/hers/ y ella, (ARG), HTML/CSS editor.</li>
+    <li> Nery Gonzalez, she/hers y ella, (US), Translator. </li>
+    <li> Alice Bi, she/hers (US) technical lead.</li>
+    <li> Carlos Javier Nusch, He/his, el, La Plata (ARG), Submitter.</li>
+</p>
+<h2>Objetivos</h2>
     <li>Reconocer diferentes enfoques de las humanidades digitales que incluyan análisis crítico de plataformas, tecno-cultura, archivos y diseños.</li>
     <li>Aprender a combinar el análisis textual con prácticas sostenibles y humanísticas que consideren a las personas y las herramientas tecnológicas en el centro de nuestro trabajo.</li>
     <li>Ampliar las habilidades de trabajo colaborativo y producir una distribución eficiente y equilibrada de las tareas.</li>
