--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -43,7 +43,7 @@
 </div>
 
 <div class="flex-container">
-    <div2
+ <div2
     <h2>Miembros del equipo</h2>
     <p>
     <li>Julieta Goldsmidt, she/her/hers/ y ella, (ARG), HTML/CSS editor.</li>
@@ -58,17 +58,7 @@
     <li>Reconocer las limitaciones y beneficios del trabajo colaborativo, con el fin de aprovechar los recursos.</li>
     <li>Compartir y respetar los diferentes conocimientos individuales para resolver posibles problemas y retos grupales.</li>
 </ul>
-<h2>Core Values / Fundamentos</h2>
-<h4>Respect</h4>
-<p>Respecting and sharing each other’s expertise, acknowledging that everyone has something to contribute to our project.</p>
-<h4>Honest Communication</h4>
-<p>We look forward to communicating frequently and honestly about progress - including troubles, fixes, and further solutions - so we can learn and work together the best we can.</p>
-<h4>Confidence</h4>
-<p>Self-confidence makes it possible to improve the work environment and strengthen the team project. For this reason, it is essential to help each member feel comfortable with each other.</p>
-<h4>Team Knowledge Building</h4>
-<p>Approach knowledge as an interpersonal construction and not an individual process.</p>
-<h4>Ethics </h4>
-<p>Being aware of the ways in which our models of thinking fall short in order to help us identify morally opaque facets of digital work.</p>
+<h2>Fundamentos</h2>
 <h4>Respeto</h4>
 <p>Respetar y compartir la experiencia de cada uno, reconociendo que todos tienen algo que aportar a nuestro proyecto.</p>
 <h4>Comunicación Honesta</h4>
@@ -79,6 +69,8 @@
 <p>Abordar el conocimiento como una construcción interpersonal y no como un proceso individual.</p>
 <h4>Ética</h4>
 <p>Ser conscientes de las formas en que nuestros modelos de pensamiento se quedan cortos para ayudarnos a identificar las facetas moralmente opacas del trabajo digital.</p>
+</div>
+
 <h2>Team management / Gestión del equipo</h2>
 <p>Mostly communicate files through email, Slack, and urgent messages through Whatsapp.</p>
 <a href="mailto:alicebi@terpmail.umd.edu" target="_blank"><img src="mail.svg" alt="Mail" width="25" scale="0">alicebi@terpmail.umd.edu</a>
