spanish and english

--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -12,7 +12,7 @@
         <h3><i>Last updated / Última actualización: 2022-09-21</i></h3>
     </div> 
 <div class="flex-container">
-<div1
+<div class="English">
 <h2>Team Members </h2>
 <ul>
     <li>Julieta Goldsmidt, she/her/hers/ y ella, (ARG), HTML/CSS editor.</li>
@@ -41,8 +41,10 @@
 <h4>Ethics </h4>
 <p>Being aware of the ways in which our models of thinking fall short in order to help us identify morally opaque facets of digital work.</p>
 </div>
+</div>
 
 <div class="flex-container">
+    <div class="Spanish">
  <div2
     <h2>Miembros del equipo</h2>
     <p>
