--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -11,8 +11,7 @@
         <h3>Group name / Nombre del Equipo: The Code Copycats</h3>
         <h3><i>Last updated / Última actualización: 2022-09-21</i></h3>
     </div> 
-<div class="flex-container">
-<div class="English">
+<div class="flex-container" class="English">
 <h2>Team Members </h2>
 <ul>
     <li>Julieta Goldsmidt, she/her/hers/ y ella, (ARG), HTML/CSS editor.</li>
@@ -43,9 +42,8 @@
 </div>
 </div>
 
-<div class="flex-container">
-    <div class="Spanish">
- <div2
+<div class="flex-container" class="Spanish">
+    
     <h2>Miembros del equipo</h2>
     <p>
     <li>Julieta Goldsmidt, she/her/hers/ y ella, (ARG), HTML/CSS editor.</li>
