--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -11,7 +11,10 @@
         <h3>Group name / Nombre del Equipo: The Code Copycats</h3>
         <h3><i>Last updated / Última actualización: 2022-09-21</i></h3>
     </div> 
-<div class="flex-container" class="English">
+<div class="flex-container">
+    <div class="column"
+  <div class="EnglishColumn">
+
 <h2>Team Members </h2>
 <ul>
     <li>Julieta Goldsmidt, she/her/hers/ y ella, (ARG), HTML/CSS editor.</li>
@@ -42,7 +45,10 @@
 </div>
 </div>
 
-<div class="flex-container" class="Spanish">
+<div class="flex-container">
+    <div class="column"
+
+<div class="SpanishColumn">
     
     <h2>Miembros del equipo</h2>
     <p>
