--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -12,7 +12,7 @@
         <h3><i>Last updated / Última actualización: 2022-09-21</i></h3>
     </div> 
 <div class="flex-container">
-    <div class="column"
+    <div class="column">
   <div class="EnglishColumn">
 
 <h2>Team Members </h2>
@@ -46,7 +46,7 @@
 </div>
 
 <div class="flex-container">
-    <div class="column"
+    <div class="column">
 
 <div class="SpanishColumn">
     
