--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -12,6 +12,7 @@
         <h3><i>Last updated / Última actualización: 2022-09-21</i></h3>
     </div> 
 <div class="flex-container">
+    <div class="row>">
     <div class="column">
   <div class="EnglishColumn">
 
@@ -46,8 +47,9 @@
 </div>
 
 <div class="flex-container">
+    <div class="row>">
     <div class="column">
-
+        
 <div class="SpanishColumn">
     
     <h2>Miembros del equipo</h2>
