--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -11,7 +11,7 @@
         <h3>Group name / Nombre del Equipo: The Code Copycats</h3>
         <h3><i>Last updated / Última actualización: 2022-09-21</i></h3>
     </div> 
-<div class="flex-container">
+<div class="pagewrapper">
     <div class="row">
     <div class="column">
   <div class="EnglishColumn">
@@ -46,7 +46,7 @@
 </div>
 </div>
 
-<div class="flex-container">
+<div class="pagewrapper">
     <div class="row">
     <div class="column">
 
