--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -48,7 +48,7 @@
 
 <div class="pagewrapper">
     <div class="row">
-    <div class="column">
+    <div class="double-column">
 
 <div class="SpanishColumn">
     
