--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -11,7 +11,7 @@
         <h3>Group name / Nombre del Equipo: The Code Copycats</h3>
         <h3><i>Last updated / Última actualización: 2022-09-21</i></h3>
     </div> 
-<div class="page-wrapper">
+<div class="some-page-wrapper">
     <div class="row">
     <div class="column">
   <div class="EnglishColumn">
@@ -46,8 +46,7 @@
 </div>
 </div>
 
-<div class="page-wrapper">
-    <div class="row">
+<div class="some-page-wrapper">
     <div class="double-column">
 
 <div class="SpanishColumn">
@@ -78,6 +77,7 @@
 <h4>Ética</h4>
 <p>Ser conscientes de las formas en que nuestros modelos de pensamiento se quedan cortos para ayudarnos a identificar las facetas moralmente opacas del trabajo digital.</p>
 </div>
+    </div>
 
 <h2>Team management / Gestión del equipo</h2>
 <p>Mostly communicate files through email, Slack, and urgent messages through Whatsapp.</p>
