--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -45,8 +45,11 @@
 <p>Being aware of the ways in which our models of thinking fall short in order to help us identify morally opaque facets of digital work.</p>
 </div>
 </div>
+    </div>
+</div>
 
 <div class="some-page-wrapper">
+    <div class="double-column"
 <div class="SpanishColumn">
     
     <h2>Miembros del equipo</h2>
@@ -75,6 +78,7 @@
 <h4>Ética</h4>
 <p>Ser conscientes de las formas en que nuestros modelos de pensamiento se quedan cortos para ayudarnos a identificar las facetas moralmente opacas del trabajo digital.</p>
 </div>
+    </div>
     </div>
 
 <h2>Team management / Gestión del equipo</h2>
