--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -43,13 +43,11 @@
 <p>Approach knowledge as an interpersonal construction and not an individual process.</p>
 <h4>Ethics </h4>
 <p>Being aware of the ways in which our models of thinking fall short in order to help us identify morally opaque facets of digital work.</p>
-</div>
-</div>
     </div>
 </div>
 
 <div class="some-page-wrapper">
-    <div class="double-column"
+    <div class="column"
 <div class="SpanishColumn">
     
     <h2>Miembros del equipo</h2>
@@ -80,6 +78,7 @@
 </div>
     </div>
     </div>
+</div>
 
 <h2>Team management / Gestión del equipo</h2>
 <p>Mostly communicate files through email, Slack, and urgent messages through Whatsapp.</p>
