--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -11,10 +11,7 @@
         <h3>Group name / Nombre del Equipo: The Code Copycats</h3>
         <h3><i>Last updated / Última actualización: 2022-09-21</i></h3>
     </div> 
-<div class="some-page-wrapper">
-    <div class="row">
-    <div class="column">
-  <div class="EnglishColumn">
+<div class="container">
 
 <h2>Team Members </h2>
 <ul>
@@ -46,10 +43,7 @@
     </div>
 </div>
 
-<div class="some-page-wrapper">
-    <div class="column"
-<div class="SpanishColumn">
-    
+<div class="container">
     <h2>Miembros del equipo</h2>
     <p>
     <li>Julieta Goldsmidt, she/her/hers/ y ella, (ARG), HTML/CSS editor.</li>
@@ -76,9 +70,7 @@
 <h4>Ética</h4>
 <p>Ser conscientes de las formas en que nuestros modelos de pensamiento se quedan cortos para ayudarnos a identificar las facetas moralmente opacas del trabajo digital.</p>
 </div>
-    </div>
-    </div>
-</div>
+    
 
 <h2>Team management / Gestión del equipo</h2>
 <p>Mostly communicate files through email, Slack, and urgent messages through Whatsapp.</p>
