--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -40,6 +40,30 @@
 <p>Approach knowledge as an interpersonal construction and not an individual process.</p>
 <h4>Ethics </h4>
 <p>Being aware of the ways in which our models of thinking fall short in order to help us identify morally opaque facets of digital work.</p>
+<h2>Team management</h2>
+<p>Mostly communicate files through email, Slack, and urgent messages through Whatsapp.</p>
+<a href="mailto:alicebi@terpmail.umd.edu" target="_blank"><img src="mail.svg" alt="Mail" width="25" scale="0">alicebi@terpmail.umd.edu</a>
+</br>
+<a href="mailto:julieta.gold@gmail.com" target="_blank"><img src="mail.svg" alt="Mail" width="25" scale="0">julieta.gold@gmail.com </a>
+</br>
+<a href="mailto:carlosnusch@prebi.unlp.edu.ar" target="_blank"><img src="mail.svg" alt="Mail" width="25" scale="0">carlosnusch@prebi.unlp.edu.ar</a>
+</br>
+<a href="mailto:Lngm@umd.edu" target="_blank"><img src="mail.svg" alt="Mail" width="25" scale="0">Lngm@umd.edu</a>
+</br>
+<p>Always message the group - through Slack or Whatsapp - before pushing, so everyone knows what changes are made.</br>
+    Maintain code through GitHub, via the Copycat repository. <a href="https://github.com/41ibi/code_copycats/ " target="_blank" class="no-lightbox">https://github.com/41ibi/code_copycats/</a></br>
+    As we learn the details of the project and learn the strengths of each member, we will distribute the specific roles.</p>
+<ul>
+    <li>We will meet once a week to organize pending tasks. We will take into account that each one can work different hours as long as they communicate efficiently. </li>
+    <li>Backup zoom session hours: Monday: 6:30-7:30 US, 7:30-8:30pm ARG (10am-1pm or 3pm-4pm Julieta)</li>
+</ul>
+<h2>Ethos</h2>
+<ul>
+    <li>Be patient and resilient.</li>
+    <li>Be kind to each other. </li>
+    <li>Learn from experience.</li>
+    <li>Humor’s welcome!</li>
+</ul>
     </div>
 </div>
 
@@ -69,26 +93,7 @@
 <p>Abordar el conocimiento como una construcción interpersonal y no como un proceso individual.</p>
 <h4>Ética</h4>
 <p>Ser conscientes de las formas en que nuestros modelos de pensamiento se quedan cortos para ayudarnos a identificar las facetas moralmente opacas del trabajo digital.</p>
-</div>
-    
-
-<h2>Team management / Gestión del equipo</h2>
-<p>Mostly communicate files through email, Slack, and urgent messages through Whatsapp.</p>
-<a href="mailto:alicebi@terpmail.umd.edu" target="_blank"><img src="mail.svg" alt="Mail" width="25" scale="0">alicebi@terpmail.umd.edu</a>
-</br>
-<a href="mailto:julieta.gold@gmail.com" target="_blank"><img src="mail.svg" alt="Mail" width="25" scale="0">julieta.gold@gmail.com </a>
-</br>
-<a href="mailto:carlosnusch@prebi.unlp.edu.ar" target="_blank"><img src="mail.svg" alt="Mail" width="25" scale="0">carlosnusch@prebi.unlp.edu.ar</a>
-</br>
-<a href="mailto:Lngm@umd.edu" target="_blank"><img src="mail.svg" alt="Mail" width="25" scale="0">Lngm@umd.edu</a>
-</br>
-<p>Always message the group - through Slack or Whatsapp - before pushing, so everyone knows what changes are made.</br>
-    Maintain code through GitHub, via the Copycat repository. <a href="https://github.com/41ibi/code_copycats/ " target="_blank" class="no-lightbox">https://github.com/41ibi/code_copycats/</a></br>
-    As we learn the details of the project and learn the strengths of each member, we will distribute the specific roles.</p>
-<ul>
-    <li>We will meet once a week to organize pending tasks. We will take into account that each one can work different hours as long as they communicate efficiently. </li>
-    <li>Backup zoom session hours: Monday: 6:30-7:30 US, 7:30-8:30pm ARG (10am-1pm or 3pm-4pm Julieta)</li>
-</ul>
+<h2>Team management</h2>
 <p>Compartiremos archivos a través de correo electrónico, Slack y mensajes urgentes a través de Whatsapp.</br>
     El código se mantendrá por medio en GitHub, via el reositorio Copycat. <a href="https://github.com/41ibi/code_copycats/ " target="_blank" class="no-lightbox">https://github.com/41ibi/code_copycats/</a></br>
     Habiendo obtenido los detalles del proyecto y conociendo las fortalezas de cada integrante, realizaremos la distribución de roles de manera específica.</p>
@@ -96,14 +101,15 @@
     <li>Nos encontraremos una vez a la semana para organizar las tareas pendientes. Tomaremos en cuenta los horarios de cada integrante para comunicarnos de manera eficiente.</li>
     <li>Horarios disponibles: Monday: 6:30-7:30 US, 7:30-8:30pm ARG (10am-1pm or 3pm-4pm Julieta)</li>
 </ul>
-<h2>Ethos /Ethos</h2>
+<h2>Ethos</h2>
 <ul>
-    <li>Be patient and resilient. / Sé paciente y resiliente.</li>
-    <li>Be kind to each other. / Sean amables el uno con el otro.</li>
-    <li>Learn from experience. / Aprende de la experiencia.</li>
-    <li>Humor’s welcome! / El humor es bienvenido!</li>
+    <li>Sé paciente y resiliente.</li>
+    <li>Sean amables el uno con el otro.</li>
+    <li>Aprende de la experiencia.</li>
+    <li>¡El humor es bienvenido!</li>
 </ul>
 </div>
+    
 
 <footer>
     <p>
