--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -6,6 +6,7 @@
 </nav>
 <div class="charter">
     <div class="charter-title">
+        <div class="column">
         <h2>Team charter / Contrato de equipo</h2>
         <img src="Cat_Logo_test2.jpg" alt="Charter_Logo." width="auto" , height="400px">
         <h3>Group name / Nombre del Equipo: The Code Copycats</h3>
@@ -66,8 +67,10 @@
 </ul>
     </div>
 </div>
+</div>
 
 <div class="container">
+    <div class="column">
     <h2>Miembros del equipo</h2>
     <p>
     <li>Julieta Goldsmidt, she/her/hers/ y ella, (ARG), HTML/CSS editor.</li>
@@ -108,6 +111,7 @@
     <li>Aprende de la experiencia.</li>
     <li>¡El humor es bienvenido!</li>
 </ul>
+</div>
 </div>
     
 
