--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -6,13 +6,16 @@
 </nav>
 <div class="charter">
     <div class="charter-title">
-        <div class="column">
+
         <h2>Team charter / Contrato de equipo</h2>
         <img src="Cat_Logo_test2.jpg" alt="Charter_Logo." width="auto" , height="400px">
         <h3>Group name / Nombre del Equipo: The Code Copycats</h3>
         <h3><i>Last updated / Última actualización: 2022-09-21</i></h3>
     </div> 
+</div>
 <div class="container">
+    <div class="column">
+        <div cass="row">
 
 <h2>Team Members </h2>
 <ul>
@@ -71,6 +74,7 @@
 
 <div class="container">
     <div class="column">
+        <div cass="row">
     <h2>Miembros del equipo</h2>
     <p>
     <li>Julieta Goldsmidt, she/her/hers/ y ella, (ARG), HTML/CSS editor.</li>
@@ -111,6 +115,7 @@
     <li>Aprende de la experiencia.</li>
     <li>¡El humor es bienvenido!</li>
 </ul>
+</div>
 </div>
 </div>
     
