--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -24,6 +24,11 @@
     <li> Alice Bi, she/hers (US) technical lead.</li>
     <li> Carlos Javier Nusch, He/his, el, La Plata (ARG), Submitter.</li>
 </ul>
+</div>
+
+</div>
+
+</div>
 <div class="container">
     <div class="column">
         <div cass="row">
