--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -19,16 +19,12 @@
 
 <h2>Team Members </h2>
 <ul>
-    <li>Julieta Goldsmidt, she/her/hers/ y ella, (ARG), HTML/CSS editor.</li>
-    <li> Nery Gonzalez, she/hers y ella, (US), Translator. </li>
+    <li>Julieta Goldsmidt, she/her/hers/ (ARG), HTML/CSS editor.</li>
+    <li> Nery Gonzalez, she/hers (US), Translator. </li>
     <li> Alice Bi, she/hers (US) technical lead.</li>
-    <li> Carlos Javier Nusch, He/his, el, La Plata (ARG), Submitter.</li>
+    <li> Carlos Javier Nusch, He/his, La Plata (ARG), Submitter.</li>
 </ul>
-</div>
 
-</div>
-
-</div>
 
 <h2>Goals</h2>
 <ul>
