--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -15,6 +15,7 @@
 </div>
 <div class="container">
     <div class="column">
+        <div class="column1"></div>
         <div cass="row">
 
 <h2>Team Members </h2>
@@ -70,9 +71,11 @@
     </div>
 </div>
 </div>
+</div>
 
 <div class="container">
     <div class="column">
+        <div class="column2">
         <div cass="row">
     <h2>Miembros del equipo</h2>
     <p>
@@ -114,6 +117,7 @@
     <li>Aprende de la experiencia.</li>
     <li>¡El humor es bienvenido!</li>
 </ul>
+</div>
 </div>
 </div>
 </div>
