--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -13,11 +13,11 @@
         <h3><i>Last updated / Última actualización: 2022-09-21</i></h3>
     </div> 
 </div>
-<div class="container">
-    <div class="column">
-        <div class="column1"></div>
-        <div cass="row">
-
+<div id="column1">
+    <div class="content">
+        <div class="paragraph">
+   
+<p>
 <h2>Team Members </h2>
 <ul>
     <li>Julieta Goldsmidt, she/her/hers/ (ARG), HTML/CSS editor.</li>
@@ -25,6 +25,8 @@
     <li> Alice Bi, she/hers (US) technical lead.</li>
     <li> Carlos Javier Nusch, He/his, La Plata (ARG), Submitter.</li>
 </ul>
+</p>
+<p>
 <h2>Goals</h2>
 <ul>
     <li>Recognize different approaches to the DH that include critical analysis of platforms, technoculture, archives, and design thinking.</li>
@@ -32,20 +34,25 @@
     <li>Expand collaborative work skills and produce an efficient and balanced distribution of tasks.</li>
     <li>Locate the limitations and benefits of collaborative work, in order to take advantage of resources.</li>
     <li>Share and respect the different individual knowledge to solve possible problems and group challenges.</li>
-
+</ul>
+</p>
+<p>
     <h2>Core Values</h2>
 <h4>Respect</h4>
 <p>Respecting and sharing each other’s expertise, acknowledging that everyone has something to contribute to our project.</p>
 <h4>Honest Communication</h4>
 <p>We look forward to communicating frequently and honestly about progress - including troubles, fixes, and further solutions - so we can learn and work together the best we can.</p>
+<p>
 <h4>Confidence</h4>
-<p>Self-confidence makes it possible to improve the work environment and strengthen the team project. For this reason, it is essential to help each member feel comfortable with each other.</p>
+Self-confidence makes it possible to improve the work environment and strengthen the team project. For this reason, it is essential to help each member feel comfortable with each other.
 <h4>Team Knowledge Building</h4>
 <p>Approach knowledge as an interpersonal construction and not an individual process.</p>
+<p>
 <h4>Ethics </h4>
 <p>Being aware of the ways in which our models of thinking fall short in order to help us identify morally opaque facets of digital work.</p>
+<p>
 <h2>Team management</h2>
-<p>Mostly communicate files through email, Slack, and urgent messages through Whatsapp.</p>
+Mostly communicate files through email, Slack, and urgent messages through Whatsapp.
 <a href="mailto:alicebi@terpmail.umd.edu" target="_blank"><img src="mail.svg" alt="Mail" width="25" scale="0">alicebi@terpmail.umd.edu</a>
 </br>
 <a href="mailto:julieta.gold@gmail.com" target="_blank"><img src="mail.svg" alt="Mail" width="25" scale="0">julieta.gold@gmail.com </a>
@@ -54,12 +61,14 @@
 </br>
 <a href="mailto:Lngm@umd.edu" target="_blank"><img src="mail.svg" alt="Mail" width="25" scale="0">Lngm@umd.edu</a>
 </br>
-<p>Always message the group - through Slack or Whatsapp - before pushing, so everyone knows what changes are made.</br>
+Always message the group - through Slack or Whatsapp - before pushing, so everyone knows what changes are made.</br>
     Maintain code through GitHub, via the Copycat repository. <a href="https://github.com/41ibi/code_copycats/ " target="_blank" class="no-lightbox">https://github.com/41ibi/code_copycats/</a></br>
-    As we learn the details of the project and learn the strengths of each member, we will distribute the specific roles.</p>
+    As we learn the details of the project and learn the strengths of each member, we will distribute the specific roles.
 <ul>
     <li>We will meet once a week to organize pending tasks. We will take into account that each one can work different hours as long as they communicate efficiently. </li>
     <li>Backup zoom session hours: Monday: 6:30-7:30 US, 7:30-8:30pm ARG (10am-1pm or 3pm-4pm Julieta)</li>
+</p>
+    <p>
 </ul>
 <h2>Ethos</h2>
 <ul>
@@ -68,15 +77,15 @@
     <li>Learn from experience.</li>
     <li>Humor’s welcome!</li>
 </ul>
+    </p>
     </div>
 </div>
 </div>
 </div>
 
-<div class="container">
-    <div class="column">
-        <div class="column2">
-        <div cass="row">
+<div id="column2">
+    <div class="content">
+        <div class="paragraph">
     <h2>Miembros del equipo</h2>
     <p>
     <li>Julieta Goldsmidt, she/her/hers/ y ella, (ARG), HTML/CSS editor.</li>
