--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -25,8 +25,8 @@
     <li> Alice Bi, she/hers (US) technical lead.</li>
     <li> Carlos Javier Nusch, He/his, La Plata (ARG), Submitter.</li>
 </ul>
-</p>
- <p style="flex: 1 1 50%">
+
+ 
 <h2>Goals</h2>
 <ul>
     <li>Recognize different approaches to the DH that include critical analysis of platforms, technoculture, archives, and design thinking.</li>
@@ -35,22 +35,20 @@
     <li>Locate the limitations and benefits of collaborative work, in order to take advantage of resources.</li>
     <li>Share and respect the different individual knowledge to solve possible problems and group challenges.</li>
 </ul>
-</p>
-<p style="flex: 1 1 50%">
+
     <h2>Core Values</h2>
 <h4>Respect</h4>
-<p>Respecting and sharing each other’s expertise, acknowledging that everyone has something to contribute to our project.</p>
+<p>Respecting and sharing each other’s expertise, acknowledging that everyone has something to contribute to our project.
 <h4>Honest Communication</h4>
-<p>We look forward to communicating frequently and honestly about progress - including troubles, fixes, and further solutions - so we can learn and work together the best we can.</p>
-<p style="flex: 1 1 50%">
+We look forward to communicating frequently and honestly about progress - including troubles, fixes, and further solutions - so we can learn and work together the best we can.
 <h4>Confidence</h4>
 Self-confidence makes it possible to improve the work environment and strengthen the team project. For this reason, it is essential to help each member feel comfortable with each other.
 <h4>Team Knowledge Building</h4>
-Approach knowledge as an interpersonal construction and not an individual process.</p>
-<p style="flex: 1 1 50%">
+Approach knowledge as an interpersonal construction and not an individual process.
+
 <h4>Ethics </h4>
-<p>Being aware of the ways in which our models of thinking fall short in order to help us identify morally opaque facets of digital work.</p>
-<p style="flex: 1 1 50%">
+Being aware of the ways in which our models of thinking fall short in order to help us identify morally opaque facets of digital work.
+
 <h2>Team management</h2>
 Mostly communicate files through email, Slack, and urgent messages through Whatsapp.
 <a href="mailto:alicebi@terpmail.umd.edu" target="_blank"><img src="mail.svg" alt="Mail" width="25" scale="0">alicebi@terpmail.umd.edu</a>
@@ -67,8 +65,7 @@ Always message the group - through Slack or Whatsapp - before pushing, so everyo
 <ul>
     <li>We will meet once a week to organize pending tasks. We will take into account that each one can work different hours as long as they communicate efficiently. </li>
     <li>Backup zoom session hours: Monday: 6:30-7:30 US, 7:30-8:30pm ARG (10am-1pm or 3pm-4pm Julieta)</li>
-</p>
-<p style="flex: 1 1 50%">
+
 </ul>
 <h2>Ethos</h2>
 <ul>
@@ -77,7 +74,6 @@ Always message the group - through Slack or Whatsapp - before pushing, so everyo
     <li>Learn from experience.</li>
     <li>Humor’s welcome!</li>
 </ul>
-    </p>
     </div>
 </div>
 </div>
@@ -92,33 +88,29 @@ Always message the group - through Slack or Whatsapp - before pushing, so everyo
     <li> Nery Gonzalez, she/hers y ella, (US), Translator. </li>
     <li> Alice Bi, she/hers (US) technical lead.</li>
     <li> Carlos Javier Nusch, He/his, el, La Plata (ARG), Submitter.</li>
-</p>
 <h2>Objetivos</h2>
-<p style="flex: 1 1 50%">
     <li>Reconocer diferentes enfoques de las humanidades digitales que incluyan análisis crítico de plataformas, tecno-cultura, archivos y diseños.</li>
     <li>Aprender a combinar el análisis textual con prácticas sostenibles y humanísticas que consideren a las personas y las herramientas tecnológicas en el centro de nuestro trabajo.</li>
     <li>Ampliar las habilidades de trabajo colaborativo y producir una distribución eficiente y equilibrada de las tareas.</li>
     <li>Reconocer las limitaciones y beneficios del trabajo colaborativo, con el fin de aprovechar los recursos.</li>
     <li>Compartir y respetar los diferentes conocimientos individuales para resolver posibles problemas y retos grupales.</li>
 </ul>
-<p style="flex: 1 1 50%">
 <h2>Fundamentos</h2>
 <h4>Respeto</h4>
 <p>Respetar y compartir la experiencia de cada uno, reconociendo que todos tienen algo que aportar a nuestro proyecto.</p>
 <h4>Comunicación Honesta</h4>
-<p>Esperamos comunicarnos con frecuencia y honestidad sobre el progreso, incluidos los problemas, las correcciones y otras soluciones, para que podamos aprender y trabajar juntos lo mejor que podamos.</p>
+Esperamos comunicarnos con frecuencia y honestidad sobre el progreso, incluidos los problemas, las correcciones y otras soluciones, para que podamos aprender y trabajar juntos lo mejor que podamos.
 <h4>Confianza</h4>
-<p style="flex: 1 1 50%">La confianza en uno mismo permite mejorar el clima laboral y potenciar el proyecto en equipo. Por esta razón, es esencial ayudar a que cada miembro se sienta cómodo con los demás.</p>
+La confianza en uno mismo permite mejorar el clima laboral y potenciar el proyecto en equipo. Por esta razón, es esencial ayudar a que cada miembro se sienta cómodo con los demás.
 <h4>Construir conocimiento en equipo</h4>
-<p style="flex: 1 1 50%">Abordar el conocimiento como una construcción interpersonal y no como un proceso individual.</p>
+Abordar el conocimiento como una construcción interpersonal y no como un proceso individual.
 <h4>Ética</h4>
-<p style="flex: 1 1 50%">Ser conscientes de las formas en que nuestros modelos de pensamiento se quedan cortos para ayudarnos a identificar las facetas moralmente opacas del trabajo digital.</p>
+Ser conscientes de las formas en que nuestros modelos de pensamiento se quedan cortos para ayudarnos a identificar las facetas moralmente opacas del trabajo digital.
 <h2>Team management</h2>
-<p style="flex: 1 1 50%">Compartiremos archivos a través de correo electrónico, Slack y mensajes urgentes a través de Whatsapp.</br>
+Compartiremos archivos a través de correo electrónico, Slack y mensajes urgentes a través de Whatsapp.</br>
     El código se mantendrá por medio en GitHub, via el reositorio Copycat. <a href="https://github.com/41ibi/code_copycats/ " target="_blank" class="no-lightbox">https://github.com/41ibi/code_copycats/</a></br>
-    Habiendo obtenido los detalles del proyecto y conociendo las fortalezas de cada integrante, realizaremos la distribución de roles de manera específica.</p>
+    Habiendo obtenido los detalles del proyecto y conociendo las fortalezas de cada integrante, realizaremos la distribución de roles de manera específica.
 <ul>
-    <p style="flex: 1 1 50%">
     <li>Nos encontraremos una vez a la semana para organizar las tareas pendientes. Tomaremos en cuenta los horarios de cada integrante para comunicarnos de manera eficiente.</li>
     <li>Horarios disponibles: Monday: 6:30-7:30 US, 7:30-8:30pm ARG (10am-1pm or 3pm-4pm Julieta)</li>
 </ul>
