--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -24,6 +24,16 @@
     <li> Alice Bi, she/hers (US) technical lead.</li>
     <li> Carlos Javier Nusch, He/his, La Plata (ARG), Submitter.</li>
 </ul>
+</p>
+
+<p style="flex: 1 1 50%">
+    <h2>Miembros del equipo</h2>
+    <p style="flex: 1 1 50%">
+    <li>Julieta Goldsmidt, she/her/hers/ y ella, (ARG), HTML/CSS editor.</li>
+    <li> Nery Gonzalez, she/hers y ella, (US), Translator. </li>
+    <li> Alice Bi, she/hers (US) technical lead.</li>
+    <li> Carlos Javier Nusch, He/his, el, La Plata (ARG), Submitter.</li>
+    </p>
 
  
 <h2>Goals</h2>
