--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -90,10 +90,11 @@ Always message the group - through Slack or Whatsapp - before pushing, so everyo
     <div class="content">
     <h2>Miembros del equipo</h2>
     <p style="flex: 1 1 50%">
+    <ul>
     <li>Julieta Goldsmidt, she/her/hers/ y ella, (ARG), HTML/CSS editor.</li>
     <li> Nery Gonzalez, she/hers y ella, (US), Translator. </li>
     <li> Alice Bi, she/hers (US) technical lead.</li>
-    <li> Carlos Javier Nusch, He/his, el, La Plata (ARG), Submitter.</li>
+    <li> Carlos Javier Nusch, He/his, el, La Plata (ARG), Submitter.</li></ul>
 <h2>Objetivos</h2>
     <li>Reconocer diferentes enfoques de las humanidades digitales que incluyan análisis crítico de plataformas, tecno-cultura, archivos y diseños.</li>
     <li>Aprender a combinar el análisis textual con prácticas sostenibles y humanísticas que consideren a las personas y las herramientas tecnológicas en el centro de nuestro trabajo.</li>
