--- a/src/content/pages/Bios/alice.html
+++ b/src/content/pages/Bios/alice.html
@@ -8,7 +8,7 @@
     <a href="https://41ibi.github.io/code_copycats/Copycats%20Charter"><button  class="button-61" role="button">CHARTER</button></a>
     <a href="https://41ibi.github.io/code_copycats/edition"><button  class="button-61" role="button">EDITION</button></a>
 </nav>
-<div>
+<div class="bio">
     <h1>
         <center>Alice Bi</center>
     </h1>
