--- a/src/content/pages/Bios/julie.html
+++ b/src/content/pages/Bios/julie.html
@@ -4,10 +4,10 @@
     <a href="https://41ibi.github.io/code_copycats/Copycats%20Charter"><button  class="button-61" role="button">CHARTER</button></a>
     <a href="https://41ibi.github.io/code_copycats/edition"><button  class="button-61" role="button">EDITION</button></a>
 </nav>
-<div>
-    <h1 style="text-align: center;" ;>Julieta Goldsmidt -</h1>
+<div class="bio>
+    <h1 style=" text-align: center; " ;>Julieta Goldsmidt -</h1>
 
-    <img src="julie-profile.jpeg " alt="Julie's photo" width="200vmax" style="float: left;" " hspace="15 " vspace="10 " ">
+    <img src="julie-profile.jpeg " alt="Julie 's photo" width="200vmax" style="float: left;" " hspace="15 " vspace="10 " ">
     <p align="justify">Clinical psychologist and psychoanalyst. Ph.D student in psychology (UBA). Researcher specializing in topology and its uses in the field of mental health. Presenter at multiple research conferences (UBA, AASM, AAHD) as well as co-author of books and
         publications in academic journals.
     </p>
