--- a/src/content/pages/Bios/Nery.html
+++ b/src/content/pages/Bios/Nery.html
@@ -4,14 +4,14 @@
     <a href="https://41ibi.github.io/code_copycats/Copycats%20Charter"><button  class="button-61" role="button">CHARTER</button></a>
     <a href="https://41ibi.github.io/code_copycats/edition"><button  class="button-61" role="button">EDITION</button></a>
 </nav>
-<div>
-    <img src="Neryprofile_pic.jpeg" alt="Neryprofile_pic photo" width="200vmax" style="float: center;" " hspace="15 " vspace="10 " ">
-    <div class="barra-redes">
-        <a href="https://www.linkedin.com/in/ligia-neryanna-gonz%C3%A1lez-4b1871b2/" target="_blank" class="no-lightbox"><img class=" wp-image-19" src="linkedin.png" alt="$linkedinid" width="20" height="20" scale="0"> </a>
-        <a href="https://www.facebook.com/ligia.neryanna/" target="_blank" class="no-lightbox"><img class=" wp-image-19" src="facebook.jpg" alt="facebook" width="20" height="20" scale="0"> </a>
-        <a href="https://twitter.com/Neryanna4" target="_blank" class="no-lightbox"><img class=" wp-image-19" src="twitter.png" alt="twitter" width="20" height="20" scale="0"> </a>
+<div class="bio">
+    <img src=" Neryprofile_pic.jpeg " alt="Neryprofile_pic photo " width="200vmax " style="float: center; " " hspace="15 " vspace="10 " ">
+    <div class="barra-redes ">
+        <a href="https://www.linkedin.com/in/ligia-neryanna-gonz%C3%A1lez-4b1871b2/ " target="_blank " class="no-lightbox "><img class=" wp-image-19 " src="linkedin.png " alt="$linkedinid " width="20 " height="20 " scale="0 "> </a>
+        <a href="https://www.facebook.com/ligia.neryanna/ " target="_blank " class="no-lightbox "><img class=" wp-image-19 " src="facebook.jpg " alt="facebook " width="20 " height="20 " scale="0 "> </a>
+        <a href="https://twitter.com/Neryanna4 " target="_blank " class="no-lightbox "><img class=" wp-image-19 " src="twitter.png " alt="twitter " width="20 " height="20 " scale="0 "> </a>
     </div>
     <h1>Nery González</h1>
 
-    <p align="justify"> Nery González is a Ph.D. student from Venezuela. She completed her bachelor's studies in Sociology at the Central University of Venezuela. She is currently investigating Diasporic Literature and transnational narratives from the Caribbean.</p>
+    <p align="justify "> Nery González is a Ph.D. student from Venezuela. She completed her bachelor's studies in Sociology at the Central University of Venezuela. She is currently investigating Diasporic Literature and transnational narratives from the Caribbean.</p>
 </div>
