bio text columns

--- a/src/content/pages/Bios/Carlos.html
+++ b/src/content/pages/Bios/Carlos.html
@@ -5,7 +5,7 @@
     <a href="https://41ibi.github.io/code_copycats/edition"><button  class="button-61" role="button">EDITION</button></a>
 </nav>
 <div>
-    <div class="bio-container">
+    <div class="bio">
         <div class="bio-header">
             <div class="foto-rounded-circle"></div>
             <div class="barra-redes">
