--- a/src/content/pages/Bios/Carlos.html
+++ b/src/content/pages/Bios/Carlos.html
@@ -22,7 +22,7 @@
         </div>
         <div class="bio-text">
             <div class="bio-en">
-                <h3><i>Presentación</i></h3>
+                <h3><i>Presentación (traducir al inglés)</i></h3>
                 <p>
                     <justify><i>Carlos J. Nusch</i> es Profesor y Licenciado en Letras por la <b>Universidad Nacional de La Plata</b> y Máster en Humanidades Digitales por la <b>Universidad Nacional de Educación a Distancia</b>. Ha publicado varios artículos sobre
                         trabajo académico colaborativo, repositorios digitales, digitalización de patrimonio cultural, análisis del discurso político y literatura clásica, medieval y moderna. Trabaja en el <b>Servicio de Difusión de la Creación Intelectual (SEDICI)</b>                        de la UNLP, en el Proyecto de Enlace de Bibliotecas (PREBI) y en el repositorio CIC-Digital (CICPBA).</justify>
