--- a/src/content/pages/Bios/julie.html
+++ b/src/content/pages/Bios/julie.html
@@ -4,11 +4,38 @@
     <a href="https://41ibi.github.io/code_copycats/Copycats%20Charter"><button  class="button-61" role="button">CHARTER</button></a>
     <a href="https://41ibi.github.io/code_copycats/edition"><button  class="button-61" role="button">EDITION</button></a>
 </nav>
-<div class="bio>
-    <h1 style=" text-align: center; " ;>Julieta Goldsmidt -</h1>
 
-    <img src="julie-profile.jpeg " alt="Julie 's photo" width="200vmax" style="float: left;" " hspace="15 " vspace="10 " ">
-    <p align="justify">Clinical psychologist and psychoanalyst. Ph.D student in psychology (UBA). Researcher specializing in topology and its uses in the field of mental health. Presenter at multiple research conferences (UBA, AASM, AAHD) as well as co-author of books and
-        publications in academic journals.
-    </p>
+<div>
+    <div class="bio">
+        <div class="bio-header">
+            <h4>J. Goldsmidt</h4>
+            <img src="julie-profile2.jpeg" alt="Julieta Goldsmidt" class="photo-rounded-circle">
+            <br>
+            <div class="barra-redes">
+                <a href="https://scholar.google.com/citations?user=JvOePv0AAAAJ&amp;hl=en" target="_blank"><img src="google_scholar.png" alt="google_scholar" width="20" height="20"></a>
+                <a href="https://www.researchgate.net/profile/Carlos_Nusch" target="_blank"><img src="research-gate.png" alt="research-gate" width="20"></a>
+                <a href="https://orcid.org/0000-0003-1715-4228" target="_blank"><img src="orcid.gif" alt="orcid" width="20" height="20"></a>
+                <a href="https://www.linkedin.com/in/carlos-nusch-962b8319/" target="_blank"><img src="linkedin.png" alt="$linkedinid" width="20" height="20"></a>
+                <a href="https://www.facebook.com/carlos.nusch" target="_blank"><img src="facebook.jpg" alt="facebook" width="20" height="20"></a>
+                <a href="https://twitter.com/KharolusIII" target="_blank"><img src="twitter.png" alt="twitter" width="20" height="20"></a>
+                <br>
+                <br>
+                <button class="button-61" role="button">CONTACT</button>
+
+            </div>
+        </div>
+        <div class="bio-en">
+            <p>
+                <justify><i>Julieta Y. Goldsmidt</i> is a Clinical psychologist and psychoanalyst. Ph.D student in psychology (UBA). Researcher specializing in topology and its uses in the field of mental health. Presenter at multiple research conferences (UBA,
+                    AASM, AAHD) as well as co-author of books and publications in academic journals.
+            </p>
+        </div>
+        <div class="bio-es">
+            <p>
+                <justify><i>Julieta Y. Goldsmidt</i> is a Clinical psychologist and psychoanalyst. Ph.D student in psychology (UBA). Researcher specializing in topology and its uses in the field of mental health. Presenter at multiple research conferences (UBA,
+                    AASM, AAHD) as well as co-author of books and publications in academic journals.
+            </p>
+
+        </div>
+    </div>
 </div>
