"mail to " ( contact button)

--- a/src/content/pages/Bios/julie.html
+++ b/src/content/pages/Bios/julie.html
@@ -20,7 +20,8 @@
                 <a href="https://twitter.com/KharolusIII" target="_blank"><img src="twitter.png" alt="twitter" width="20" height="20"></a>
                 <br>
                 <br>
-                <button class="button-61" role="button">CONTACT</button>
+                <a href="mailto:julieta.gold@gmail.com">
+                    <button class="button-61" role="button">CONTACT</button></a>
 
             </div>
         </div>
