--- a/src/content/pages/Bios/Carlos.html
+++ b/src/content/pages/Bios/Carlos.html
@@ -19,7 +19,8 @@
                 <a href="https://twitter.com/KharolusIII" target="_blank"><img src="twitter.png" alt="twitter" width="20" height="20"></a>
                 <br>
                 <br>
-                <button class="button-61" role="button">CONTACT</button>
+                <a href="mailto:carlosnusch@prebi.unlp.edu.ar">
+                    <button class="button-61" role="button">CONTACT</button></a>
 
             </div>
         </div>
