--- a/src/content/pages/Bios/Nery.html
+++ b/src/content/pages/Bios/Nery.html
@@ -21,7 +21,9 @@
                 <a href="https://twitter.com/Neryanna4" target="_blank"><img src="twitter.png" alt="twitter" width="20" height="20"></a>
                 <br>
                 <br>
-                <button class="button-61" role="button">CONTACT</button>
+                <a href="mailto:lngm@umd.edu">
+                    <button class="button-61" role="button">CONTACT</button></a>
+
 
             </div>
         </div>
