--- a/src/content/pages/Bios/alice.html
+++ b/src/content/pages/Bios/alice.html
@@ -22,7 +22,8 @@
                 <a href="https://twitter.com/Neryanna4" target="_blank"><img src="twitter.png" alt="twitter" width="20" height="20"></a>
                 <br>
                 <br>
-                <button class="button-61" role="button">CONTACT</button>
+                <a href="mailto:alicebi@terpmail.umd.edu">
+                    <button class="button-61" role="button">CONTACT</button></a>
 
             </div>
         </div>
